# RE-GCN

./: Dockerfile  README.md  pyproject.toml
data/YAGO4.5/: ent2word.py
rgcn/: knowledge_graph.py  utils.py
src/: main.py
