[project]
name = "re-gcn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "torch==2.4.0",
  "torchvision==0.19.0",
  "dgl",
  "tqdm",
  "pandas",
  "rdflib"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124" },
]
dgl = [
  { index = "dgl-cu124" }
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "dgl-cu124"
url = "https://data.dgl.ai/wheels/torch-2.4/cu124/repo.html"
explicit = true
flat = true