[project]
name = "re-gcn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "dgl==2.5.0",
  "tqdm",
  "pandas",
  "rdflib"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
dgl = [
  { index = "dgl-cu128" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "dgl-cu128"
url = "https://gitlab.com/api/v4/projects/1060110/packages/pypi/simple"
explicit = true